<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txtLayoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subTitle"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        />

    <ImageView
        android:id="@+id/imgTonyStark"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/tony_stark"
        android:layout_margin="20dp"
        android:contentDescription="@string/imageDesc"
        android:layout_centerInParent="true"
        />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/submitText"
        android:background="#207D96"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgTonyStark"
        android:layout_gravity="center"
        android:hint="@string/textHint"
        android:inputType="text"
        android:minHeight="48dp" />
</RelativeLayout>