<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/facebook_blue"
    >


    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/facebook_logo"
        android:layout_gravity="center"
        android:layout_margin="100dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:layout_gravity="center"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/white"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/text_SignUp"
        android:textColor="@color/white"
        android:layout_marginTop="100dp"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/text_forgotPassword"
        android:textColor="@color/white"
        />


</LinearLayout>