<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgTonyStark2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:src="@drawable/tony_stark" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:text="@string/imageDesc"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtName"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:text="@string/email"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmail"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:text="@string/phone"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgTonyStark2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/tony_stark"
                android:layout_margin="10dp"
                />
            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imageDesc"
                android:textSize="18sp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:layout_below="@id/txtName"
                />

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="16sp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:layout_below="@id/txtEmail"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgTonyStark2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/tony_stark"
                android:layout_margin="10dp"
                />
            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imageDesc"
                android:textSize="18sp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:layout_below="@id/txtName"
                />

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="16sp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:layout_below="@id/txtEmail"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgTonyStark2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/tony_stark"
                android:layout_margin="10dp"
                />
            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imageDesc"
                android:textSize="18sp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:layout_below="@id/txtName"
                />

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="16sp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:layout_below="@id/txtEmail"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgTonyStark2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/tony_stark"
                android:layout_margin="10dp"
                />
            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imageDesc"
                android:textSize="18sp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:layout_below="@id/txtName"
                />

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="16sp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:layout_below="@id/txtEmail"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgTonyStark2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/tony_stark"
                android:layout_margin="10dp"
                />
            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imageDesc"
                android:textSize="18sp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:layout_below="@id/txtName"
                />

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="16sp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:layout_below="@id/txtEmail"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgTonyStark2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/tony_stark"
                android:layout_margin="10dp"
                />
            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imageDesc"
                android:textSize="18sp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:layout_below="@id/txtName"
                />

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="16sp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:layout_below="@id/txtEmail"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgTonyStark2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/tony_stark"
                android:layout_margin="10dp"
                />
            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imageDesc"
                android:textSize="18sp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:layout_below="@id/txtName"
                />

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="16sp"
                android:layout_toEndOf="@id/imgTonyStark2"
                android:layout_below="@id/txtEmail"
                />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>